[RS-FF] fixed attribute box jumping on character page opening-closing

--- a/rulesets/rs-ff/src/main/resources/WEB-INF/resources/ff.css
+++ b/rulesets/rs-ff/src/main/resources/WEB-INF/resources/ff.css
@@ -67,6 +67,7 @@ div.ffMainAttribute32 {
 
 #ffMenu #inventory {
   display: none;
+  width: 100% !important;
 }
 
 div.ffMainAttributeValue {
